# UniversalDXSDK

./: .gitignore  CMakeLists.txt  GenLibs.bat
Include/: d2d1.h  d2d1effecthelpers.h  d2derr.h  d3d10.h  d3d10_1.h  d3d10sdklayers.h  d3d11.h  d3d11_1.h  d3d11_3.h  d3d11_4.h  d3d11on12.h  d3d11sdklayers.h  d3d12.h  d3d12sdklayers.h  d3d12video.h  d3dcommon.h  dwrite_3.h  dxgi.h  dxgi1_2.h  dxgi1_3.h  dxgi1_4.h  dxgi1_5.h  dxgi1_6.h  dxgidebug.h  dxgitype.h  x3daudio.h  xaudio2.h  xinput.h
